<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="AppName">Impactor Unroot</string>
    <string name="OpenDrawer">Open Drawer</string>
    <string name="AllDocs">Impactor will unroot and wipe your device, removing root access and all data.\nYour apps, files and personal data will be permanently deleted.\nThe device will be rebooted during the process, and it can take a few minutes, depending on your data size.\nThis process will return your device back to its factory state.</string>
    <string name="DataDocs">Impactor will wipe your device, removing data (while preserving root access). Your apps will be erased, and root access preserved. Your media files, such as songs, photos, documents, and media will be preserved.\nThe device will be rebooted during the process, and it can take some minutes, depending on your data size.</string>
    <string name="UnrootDocs">Impactor will unroot your device, removing root access.\nYour applications and data will be preserved, and root access removed.\nThe device will be rebooted during the process, and it can take a few minutes.\nAll superuser binaries and managers will be removed.</string>
    <string name="BootloaderCard">Bootloader</string>
    <string name="BootloaderCardDescription">Reboot the device to its bootLoader</string>
    <string name="RebootCard">Reboot</string>
    <string name="RebootCardDescription">Reboot the device\'s system</string>
    <string name="RecoveryCard">Recovery</string>
    <string name="RecoveryCardContent">Boot the device into recovery mode</string>
    <string name="SafeModeCard">Safe Mode</string>
    <string name="SafeModeCardDescription">Restarts Android into safe mode</string>
    <string name="ShutdownCard">Shutdown</string>
    <string name="ShutdownCardDescription">Power off the device</string>
    <string name="SoftRebootCard">Fast Reboot</string>
    <string name="SoftRebootCardDescription">Perform a soft reboot</string>
    <string name="UIRestartCard">Restart UI</string>
    <string name="UIRestartCardDescription">Restart the SystemUI daemon</string>
    <string name="DialogEraseContent">All data will be erased</string>
    <string name="DialogEraseTitle">Continue?</string>
    <string name="DialogCancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="DialogContinue">CONTINUE</string>
    <string name="DialogFullContent">Your device data (/data and /cache) will be erased and the system will be unrooted</string>
    <string name="DialogFullTitle">Continue?</string>
    <string name="CheckDialogConfirm">UNDERSTOOD</string>
    <string name="CheckDialogContent">Your device is not rooted.</string>
    <string name="CheckDialogExit">EXIT</string>
    <string name="CheckDialogTitle">Root Error</string>
    <string name="SystemCheck">System check</string>
    <string name="TitleUnroot">Unroot</string>
    <string name="TitleReboot">Reboot</string>
    <string name="TitleInfo">Info</string>
    <string name="TitleErase">Erase</string>
    <string name="DrawerOpen">Open Drawer</string>
    <string name="DrawerClose">Close Drawer</string>
    <string name="DrawerUnroot">Unroot</string>
    <string name="DrawerReboot">Rebooter</string>
    <string name="DrawerFull">Full Reset</string>
    <string name="DrawerInfo">About</string>
    <string name="DrawerErase">Erase</string>
    <string name="DrawerExtra">Extra</string>
    <string name="DialogUnrootTitle">Confirm unroot</string>
    <string name="DialogUnrootContent">Continuing, the unroot process will start.\nDevice data will not be modified.</string>
    <string name="ProgressDialogWipeTitle">Formatting</string>
    <string name="DocsCardTitle">Warning</string>
    <string name="RootCheckCardTitle">Root Check</string>
    <string name="DrawerTitleWipe">Impactor Eraser</string>
    <string name="DrawerTitleReboot">Impactor Reboot</string>
    <string name="DrawerTitleUnroot">Impactor Unroot</string>
    <string name="PermissionImageDescriptionAccessibility">Error: Cannot access to external storage</string>
    <string name="ExternalStoragePermissionTitle">Permissions denied</string>
    <string name="ExternalStoragePermissionContent">Impactor is unable to read external storage because it has not been granted the permission. Please allow it in the application settings</string>
    <string name="CheckRootOK">Root installed</string>
    <string name="CheckRootError">Root error</string>

    <string name="UnrootDialogInit">Initializing unroot process...</string>
    <string name="UnrootDialogTitle">Unrooting...</string>
    <string name="unroot_progress">Unroot in progress.\nProcess can take up to a minute.\nDo not close the application.</string>
    <string name="unroot_wipe_progress">Unroot and wiping in progress.\nProcess can take up to a minute.\nDo not close the application.</string>
    <string name="progress_wipe">Data wiping in progress (/data and /cache).\nProcess can take up to a minute.\nDo not close the application.</string>
    <string name="initializing_environment">Initializing environment..</string>
    <string name="continue_in_system_question">Continue in Settings</string>
    <string name="continue_in_system_content">No root access on this device. You can open the Settings app, search for the wipe menu and confirm the operation</string>
    <string name="continue_in_settings_positive">OPEN SETTINGS</string>
    <string name="continue_in_settings_negative">CANCEL</string>
    <string name="check_in_progress">Check in progress...</string>


</resources>