<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/card_borderless"
    android:paddingLeft="@dimen/card_borderless"
    android:paddingRight="@dimen/card_borderless"
    android:paddingStart="@dimen/card_borderless"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/card_borderless"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.andreacioccarelli.impactor.ui.CompleteUnrootActivity"
    tools:showIn="@layout/total_layout">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardElevation="2sp"
            app:cardBackgroundColor="@color/Amber_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0sp"
            android:clickable="true"
            android:drawSelectorOnTop="true"
            android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DocsCardTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AllDocs"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.cardview.widget.CardView
            app:cardElevation="2sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0sp"
            android:clickable="true"
            android:drawSelectorOnTop="true"
            android:foreground="?attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20sp">

                <TextView
                    android:id="@+id/check_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RootCheckCardTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_toEndOf="@+id/check_image"
                    android:layout_toRightOf="@+id/check_image" />

                <ImageView
                    android:layout_marginRight="12dp"
                    android:padding="8dp"
                    android:id="@+id/check_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/CheckRootOK"
                    app:srcCompat="@drawable/loading"/>


                <TextView
                    android:id="@+id/check_text"
                    android:text="@string/check_in_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/check_title"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/check_image"
                    android:layout_toEndOf="@+id/check_image" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            app:cardElevation="2sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0sp"
            android:clickable="true"
            android:drawSelectorOnTop="true"
            android:foreground="?attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20sp">

                <TextView
                    android:id="@+id/hw_check_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SystemCheck"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_toEndOf="@+id/hw_check_image"
                    android:layout_toRightOf="@+id/hw_check_image" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/loading"
                    android:layout_marginRight="12dp"
                    android:padding="8dp"
                    android:id="@+id/hw_check_image"
                    android:contentDescription="@string/CheckRootError" />

                <TextView
                    android:text="@string/check_in_progress"
                    android:id="@+id/hw_check_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hw_check_title"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/hw_check_image"
                    android:layout_toEndOf="@+id/hw_check_image" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
